<resources>
    <string name="app_name">Assignment 2 - Covid Firebase</string>
    <string name="alexg_info">Alex Giasson A00982145</string>
    <string name="aidanw_info">Aidan Waterson A00000666</string>
    <string name="auth_failure">Authentication Failure</string>
    <string name="cases_by_month_and_year">Cases by Month and Year</string>
    <string name="cases_by_health_authority">Cases by Health Authority</string>
    <string name="cases_by_gender">Cases by Gender</string>
    <string name="cases_by_age_group">Cases by Age Group</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="continue_">Continue</string>
    <string name="return_to_auth">Return to Authentication</string>
    <string name="gender_tab">Gender</string>
    <string name="age_tab">Age</string>
    <string name="ha_tab">HA</string>
    <string name="date_tab">Date</string>
    <string name="find">Find</string>
    <string name="date_filter">Date Filter</string>
    <string name="please_click_around_while_things_load">Please click around while items load</string>
    <string name="items_loaded">items loaded</string>
</resources>